--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,15 @@
   </dependencies>
 
   <build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>${spring.boot.version}</version>
-      </plugin>
-    </plugins>
-  </build>
+  <plugins>
+    <plugin>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-maven-plugin</artifactId>
+      <version>${spring.boot.version}</version>
+      <configuration>
+        <mainClass>com.example.alertas.Application</mainClass>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
 </project>
