fix: add spring-boot repackage to generate executable jar

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
       <configuration>
         <mainClass>com.example.alertas.Application</mainClass>
       </configuration>
+      <executions>
+        <execution>
+          <goals>
+            <goal>repackage</goal>
+          </goals>
+        </execution>
+      </executions>
     </plugin>
   </plugins>
 </build>
